# lorica

./: AUTHORS  ChangeLog  Makefile.am  README.md  bootstrap  configure.ac  lorica.mwc  lorica.spec.in  release.sh
MPC/config/: lorica_ssliop.mpb  loricacommon.mpb
acetao/: Makefile.am  acetao_svn_update.sh
apple/: build
apple/diskimage/: DS_Store  SLA.bz2  build
apple/installer/: Info.plist  build  com.42tools.lorica.plist
apple/installer/lorica.pmdoc/: 01scanner-contents.xml  01scanner.xml  index.xml
apple/installer/resources/: License.rtf  ReadMe.rtf  Welcome.rtf
apple/installer/scripts/: postflight
apple/uninstaller/: Info.plist  Uninstall Lorica_Prefix.pch  build  main.m  uninstallWrapper.h  uninstallWrapper.m
apple/uninstaller/English.lproj/: InfoPlist.strings
apple/uninstaller/Uninstall Lorica.xcodeproj/: project.pbxproj
apple/uninstaller/resources/: uninstall.icns  uninstall.tool
deb/: Makefile.am  README  changelog.pre  control.in  copyright.in  lorica-dev.install.in  lorica.install.in  rules  version.sed.in  watch.in
defines/: Makefile.am  build-system-defs.h  hardcoded-defs.h
docs/: Lorica.txt  Makefile.am  building_lorica  using_the_generic_evaluator
ebuild/: ChangeLog  Makefile.am  lorica.ebuild.in  metadata.xml
init_rc/: Makefile.am  gentoo.initd  rhel.initd  ubuntu.initd
m4/: acetao.m4  check_compiler_option.m4  checkbuild.m4  checkpic.m4  checkstl.m4  compiler.m4  cs_check_host.m4  emit.m4  jamcache.m4  language.m4  platform_adapt.m4  split.m4  textcache.m4  trim.m4  visibility.m4  warnings.m4
src/: Makefile.am
src/OCI/: AsynchProxyTools.mpc  COPYING  Makefile.am  OperationTable.cpp  OperationTable.h  ProxyReplyHandler.cpp  ProxyReplyHandler.h  ProxyServant.cpp  ProxyServant.h
src/lorica/: ConfigBase.cpp  ConfigBase.h  EvaluatorBase.cpp  EvaluatorBase.h  EvaluatorLoader.cpp  EvaluatorLoader.h  FileConfig.cpp  FileConfig.h  GenericEvaluator.cpp  GenericEvaluator.h  GenericLoader.cpp  GenericLoader.h  GenericMapper.cpp  GenericMapper.h  IFRService.cpp  IFRService.h  Makefile.am  MapperRegistry.cpp  MapperRegistry.h  NullProxyMapper.cpp  NullProxyMapper.h  ProxyMapper.cpp  ProxyMapper.h  ProxyReplyHandler.cpp  ProxyReplyHandler.h  ProxyServant.cpp  ProxyServant.h  RMVByMapped.cpp  RMVByMapped.h  ReferenceMapValue.cpp  ReferenceMapValue.h  ReferenceMapper.idl  ServerAgent.idl  ServerAgent_impl.cpp  ServerAgent_impl.h  debug.cpp  debug.h  lorica_Client.mpc  lorica_EvaluatorBase.mpc  lorica_GenericEvaluator.mpc
src/proxy/: Makefile.am  ReferenceMapper_i.cpp  ReferenceMapper_i.h  UNIX_svc_loader.cpp  UNIX_svc_loader.h  Win32_svc_loader.cpp  Win32_svc_loader.h  lorica.conf  lorica.ssliop  main.cpp  ntsvc.cpp  ntsvc.h  proxy.cpp  proxy.h  proxy.mpc  proxy.rc  svc_loader_base.cpp  svc_loader_base.h
support_files/: lorica.nsi
support_files/brutus/: brutus-server.nsi  brutus.conf  lorica.conf  lorica.conf.client  lorica.ssliop  lorica_codeset.conf  nonfree-license.txt  servicelib.nsh
tests/: Makefile.am  lorica_tests.lst
tests/exception/: Hello.cpp  Hello.h  Makefile.am  README  Test.idl  client.cpp  exception.mpc  run_test.pl  server.cpp  test.conf
tests/fileConfig/: Makefile.am  fileConfig.mpc  main.cpp  test.conf
tests/garbageCollector/: Hello.cpp  Hello.h  Makefile.am  Test.idl  client.cpp  garbageCollector.mpc  run_test.pl  server.cpp  test.conf
tests/genericEvaluator/: Makefile.am
tests/genericEvaluator/3-way-callback/: 3-way-callback.mpc  Callback_i.cpp  Callback_i.h  Makefile.am  README  Server_i.cpp  Server_i.h  Test.idl  client.cpp  lorica-client.conf  lorica-server.conf  run_test.pl  server.cpp
tests/genericEvaluator/basic/: Makefile.am  basic.mpc  run_test.pl  server.cpp  test.conf  test.idl  test_i.h
tests/genericEvaluator/basic_collocate/: Makefile.am  basic_collocate.mpc  client.cpp  run_test.pl  server.cpp  test.conf  test.idl  test_i.cpp  test_i.h
tests/genericEvaluator/bidir/: Makefile.am  Receiver_i.cpp  Receiver_i.h  Server_Task.h  Test.idl  bidir.mpc  client.cpp  run_test.pl  test.conf
tests/genericEvaluator/callback/: Client_Task.cpp  Client_Task.h  Makefile.am  Receiver_i.cpp  Sender_i.cpp  Sender_i.h  Server_Task.cpp  callback.mpc  client.cpp  run_test.pl  server.cpp  test.conf
tests/genericEvaluator/forward/: Makefile.am  client.cpp  forward.mpc  orb_initializer.cpp  orb_initializer.h  run_test.pl  server.cpp  server_interceptor.cpp  server_interceptor.h  test.conf  test.idl  test_i.cpp  test_i.h
tests/genericEvaluator/logging/: Makefile.am  ServerAgent_i.cpp  ServerAgent_i.h  client.cpp  logging.mpc  run_test.pl  server.cpp  test.conf
tests/genericEvaluator/persistence_ifr/: Makefile.am  persistence_ifr.mpc  run_test.pl  test.conf  test_i.cpp
tests/genericEvaluator/server_agent/: Makefile.am  ServerAgent_i.cpp  ServerAgent_i.h  client.cpp  run_test.pl  server.cpp  server_agent.mpc  test.conf  test.idl  test_i.cpp  test_i.h
tests/genericEvaluator/unbind/: Makefile.am  Servants.cpp  Servants.h  Test.idl  run_test.pl  server.cpp  test.conf  unbind.mpc
tests/genericEvaluator/union/: Client_Orb_Task.cpp  Client_Orb_Task.h  CommentRestriction_impl.cpp  CommentRestriction_impl.h  Makefile.am  RestrictionContainer_impl.cpp  RestrictionContainer_impl.h  TestServer_impl.cpp  TestServer_impl.h  client.cpp  run_test.pl  server.cpp  test.idl  union.mpc
tests/mapForClient/: Hello.h  Makefile.am  README  client.cpp  mapForClient.mpc  run_test.pl  server.cpp  test.conf
tests/mapForClientWithCorbaloc/: Hello.cpp  Makefile.am  README  Test.idl  client.cpp  mapForClientWithCorbaloc.mpc  run_test.pl  server.cpp
tests/mapForServer/: Hello.cpp  Makefile.am  README  client.cpp  run_test.pl  server.cpp  test.conf
tests/secureBridge/: Hello.cpp  Hello.h  Makefile.am  client.cpp  east.conf  run_test.pl  secureBridge.mpc  server.cpp  west.conf  west_orb.conf
tests/secureInvocation/: Hello.cpp  Hello.h  Makefile.am  README  Test.idl  client.conf  client.cpp  run_test.pl  secureInvocation.mpc  server.conf  server.cpp  test.conf
utils/ior_mapper/: ior_mapper.cpp  ior_mapper.mpc
(+2 files in other folders)
